SERVER-41641 Misspelling in uassert

**too big** instead of **to big**

Closes #1263

Signed-off-by: dhatcher42 <daniel.hatcher@mongodb.com>